Aplicando cambios de idiomas

--- a/core/src/main/resources/messages_en.properties
+++ b/core/src/main/resources/messages_en.properties
@@ -59,11 +59,15 @@ lbl.seleccioneIdioma=Select Language
 btn.regresar=Back
 
 
- #Nivel1
+ #Niveles
 dialog.felicidadesTitulo=Congratulations
 dialog.felicidadesTexto=The candy reached OmNom's mouth.
 btn.aceptar=Accept
 dialog.nivelTerminadoTitulo=Level Finished
-dialog.nivelTerminadoTexto=The candy fell. Do you want to retry the level or return to the menu?
-btn.volverAlMenu=Return to menu
+dialog.nivelTerminadoTexto=The candy fell. Do you want to retry the level or return to the map?
+btn.volverAlMapa=Return to map
 btn.repetirNivel=Retry level
+btn.mapa=Map
+
+#Menuniveles
+btn.regresar=Back
