--- a/core/src/main/resources/messages_es.properties
+++ b/core/src/main/resources/messages_es.properties
@@ -59,11 +59,15 @@ lbl.seleccioneIdioma=Seleccione el idioma
 btn.regresar=Regresar
  
 
- #Nivel1
+ #Niveles
  dialog.felicidadesTitulo=Felicidades
 dialog.felicidadesTexto=El dulce llego a la boca de OmNom.
 btn.aceptar=Aceptar
 dialog.nivelTerminadoTitulo=Nivel Terminado
-dialog.nivelTerminadoTexto=El dulce se cayo. ¿Deseas repetir el nivel o volver al menu?
-btn.volverAlMenu=Volver al menu
+dialog.nivelTerminadoTexto=El dulce se cayo. ¿Deseas repetir el nivel o volver al map?
+btn.volverAlMap=Volver al map
+btn.mapa=Mapa
 btn.repetirNivel=Repetir nivel
+
+#Menuniveles
+btn.regresar=Regresar
