--- a/core/src/main/resources/messages_es.properties
+++ b/core/src/main/resources/messages_es.properties
@@ -64,8 +64,8 @@ btn.regresar=Regresar
 dialog.felicidadesTexto=El dulce llego a la boca de OmNom.
 btn.aceptar=Aceptar
 dialog.nivelTerminadoTitulo=Nivel Terminado
-dialog.nivelTerminadoTexto=El dulce se cayo. ¿Deseas repetir el nivel o volver al map?
-btn.volverAlMap=Volver al map
+dialog.nivelTerminadoTexto=El dulce se cayo. ¿Deseas repetir el nivel o volver al mapa?
+btn.volverAlMapa=Volver al mapa
 btn.mapa=Mapa
 btn.repetirNivel=Repetir nivel
 
