--- a/core/src/main/resources/messages_en.properties
+++ b/core/src/main/resources/messages_en.properties
@@ -45,11 +45,14 @@ lbl.nombreCompleto=Full Name:
 lbl.fechaRegistro=Registration Date:
 lbl.ultimaSesion=Last Session:
 lbl.avatar=Avatar:
-btn.cambiarFoto=Change Photo
 btn.regresar=Back
+btn.eliminarCuenta=Delete Account
+btn.cambiarFoto=Change Photo
+dialog.confirmarEliminarTitulo=Confirm Deletion
+dialog.confirmarEliminarTexto=Are you sure you want to delete your account?
+dialog.si=Yes
+dialog.no=No
 msg.avatarActualizado=Avatar updated.
-dialog.aviso=Notice
-dialog.ok=OK
 
 
 # Preferencia Juego
