--- a/core/src/main/resources/messages_es.properties
+++ b/core/src/main/resources/messages_es.properties
@@ -46,11 +46,14 @@ lbl.nombreCompleto=Nombre Completo:
 lbl.fechaRegistro=Fecha de Registro:
 lbl.ultimaSesion=Ultima Sesion:
 lbl.avatar=Avatar:
-btn.cambiarFoto=Cambiar Foto
 btn.regresar=Regresar
+btn.eliminarCuenta=Eliminar Cuenta
+btn.cambiarFoto=Cambiar Foto
+dialog.confirmarEliminarTitulo=Confirmar Eliminacion
+dialog.confirmarEliminarTexto=¿Esta seguro de eliminar su cuenta?
+dialog.si=Si
+dialog.no=No
 msg.avatarActualizado=Avatar actualizado.
-dialog.aviso=Aviso
-dialog.ok=OK
 
 # Preferenciajuego
 titulo.preferenciasJuego=Preferencias de Juego
