--- a/core/src/main/resources/messages_en.properties
+++ b/core/src/main/resources/messages_en.properties
@@ -9,6 +9,7 @@ msg.debesIniciarSesion=You must log in to play.
 menu.principal=Main Menu
 btn.jugar=Play
 btn.cerrarSesion=Log Out
+btn.ranking=Ranking
 btn.miPerfil=My Profile
 btn.preferenciasJuego=Game Preferences
 msg.debesIniciarSesionParaJugar=You must log in to play.
@@ -38,6 +39,12 @@ msg.usuarioContrasenaIncorrectos=Incorrect username or password
 dialog.aviso=Notice
 dialog.ok=OK
 
+# Menu Ranking
+menu.ranking=Ranking
+ranking.name=Player
+ranking.estrellas=Stars
+btn.regresar=Go Back
+
  # Mi perfil
  lbl.tituloPerfil=My Profile
 lbl.usuario=User:
@@ -45,6 +52,9 @@ lbl.nombreCompleto=Full Name:
 lbl.fechaRegistro=Registration Date:
 lbl.ultimaSesion=Last Session:
 lbl.avatar=Avatar:
+lbl.tiempo= Time Played:
+lbl.estrellas=Stars:
+lbl.nivel=Levels:
 btn.regresar=Back
 btn.eliminarCuenta=Delete Account
 btn.cambiarFoto=Change Photo
