--- a/core/src/main/resources/messages_es.properties
+++ b/core/src/main/resources/messages_es.properties
@@ -10,6 +10,7 @@ menu.principal=Menu Principal
 btn.jugar=Jugar
 btn.cerrarSesion=Cerrar Sesion
 btn.miPerfil=Mi Perfil
+btn.ranking=Clasificacion
 btn.preferenciasJuego=Preferencias de Juego
 msg.debesIniciarSesionParaJugar=Debes iniciar sesion para jugar.
 msg.debesIniciarSesionParaVerPerfil=Debes iniciar sesion para ver tu perfil.
@@ -39,6 +40,12 @@ msg.usuarioContrasenaIncorrectos=Usuario o contrasena incorrectos
 dialog.aviso=Aviso
 dialog.ok=OK
 
+# Menu Ranking
+menu.ranking=Clasificaciones
+ranking.name=Jugador
+ranking.estrellas=Estrellas
+btn.regresar=Regresar
+
 # Mi perfil
 lbl.tituloPerfil=Mi Perfil
 lbl.usuario=Usuario:
@@ -46,11 +53,14 @@ lbl.nombreCompleto=Nombre Completo:
 lbl.fechaRegistro=Fecha de Registro:
 lbl.ultimaSesion=Ultima Sesion:
 lbl.avatar=Avatar:
+lbl.tiempo= Tiempo Jugado:
+lbl.estrellas=Estrellas:
+lbl.nivel=Niveles:
 btn.regresar=Regresar
 btn.eliminarCuenta=Eliminar Cuenta
 btn.cambiarFoto=Cambiar Foto
 dialog.confirmarEliminarTitulo=Confirmar Eliminacion
-dialog.confirmarEliminarTexto=¿Esta seguro de eliminar su cuenta?
+dialog.confirmarEliminarTexto=\u00c2\u00bfEsta seguro de eliminar su cuenta?
 dialog.si=Si
 dialog.no=No
 msg.avatarActualizado=Avatar actualizado.
@@ -67,7 +77,7 @@ btn.regresar=Regresar
 dialog.felicidadesTexto=El dulce llego a la boca de OmNom.
 btn.aceptar=Aceptar
 dialog.nivelTerminadoTitulo=Nivel Terminado
-dialog.nivelTerminadoTexto=El dulce se cayo. ¿Deseas repetir el nivel o volver al mapa?
+dialog.nivelTerminadoTexto=El dulce se cayo. \u00c2\u00bfDeseas repetir el nivel o volver al mapa?
 btn.volverAlMapa=Volver al mapa
 btn.mapa=Mapa
 btn.repetirNivel=Repetir nivel
