--- a/core/src/main/resources/messages_en.properties
+++ b/core/src/main/resources/messages_en.properties
@@ -10,6 +10,7 @@ menu.principal=Main Menu
 btn.jugar=Play
 btn.cerrarSesion=Log Out
 btn.ranking=Ranking
+btn.logs= Logs
 btn.miPerfil=My Profile
 btn.preferenciasJuego=Game Preferences
 msg.debesIniciarSesionParaJugar=You must log in to play.
@@ -18,7 +19,7 @@ dialog.aviso=Notice
 dialog.ok=OK
 # CrearJugador
 lbl.apodo=Nickname:
-lbl.nombreCompleto=FullName:
+lbl.nombreCompleto=Full Name:
 lbl.contrasena=Password:
 btn.registrar=Register
 btn.cancelar=Cancel
@@ -44,6 +45,11 @@ menu.ranking=Ranking
 ranking.name=Player
 ranking.estrellas=Stars
 btn.regresar=Go Back
+#Menu Logs
+logs.date= Date
+menu.logs=Logs
+logs.estrellas=Stars
+logs.name= Level
 
  # Mi perfil
  lbl.tituloPerfil=My Profile
@@ -77,7 +83,7 @@ dialog.felicidadesTitulo=Congratulations
 dialog.felicidadesTexto=The candy reached OmNom's mouth.
 btn.aceptar=Accept
 dialog.nivelTerminadoTitulo=Level Finished
-dialog.nivelTerminadoTexto=The candy fell. Do you want to retry the level or return to the map?
+dialog.nivelTerminadoTexto=The candy fell or you didn't catch any star. Do you want to retry the level or return to the map?
 btn.volverAlMapa=Return to map
 btn.repetirNivel=Retry level
 btn.mapa=Map
