--- a/core/src/main/resources/messages_es.properties
+++ b/core/src/main/resources/messages_es.properties
@@ -11,6 +11,7 @@ btn.jugar=Jugar
 btn.cerrarSesion=Cerrar Sesion
 btn.miPerfil=Mi Perfil
 btn.ranking=Clasificacion
+btn.logs= Historial
 btn.preferenciasJuego=Preferencias de Juego
 msg.debesIniciarSesionParaJugar=Debes iniciar sesion para jugar.
 msg.debesIniciarSesionParaVerPerfil=Debes iniciar sesion para ver tu perfil.
@@ -45,6 +46,11 @@ menu.ranking=Clasificaciones
 ranking.name=Jugador
 ranking.estrellas=Estrellas
 btn.regresar=Regresar
+#Menu Logs
+logs.date=Fecha
+menu.logs=Historial
+logs.estrellas= Estrellas
+logs.name= Nivel
 
 # Mi perfil
 lbl.tituloPerfil=Mi Perfil
@@ -77,7 +83,7 @@ btn.regresar=Regresar
 dialog.felicidadesTexto=El dulce llego a la boca de OmNom.
 btn.aceptar=Aceptar
 dialog.nivelTerminadoTitulo=Nivel Terminado
-dialog.nivelTerminadoTexto=El dulce se cayo. \u00c2\u00bfDeseas repetir el nivel o volver al mapa?
+dialog.nivelTerminadoTexto=El dulce se cayo o no conseguiste ninguna estrella. \u00bfDeseas repetir el nivel o volver al mapa?
 btn.volverAlMapa=Volver al mapa
 btn.mapa=Mapa
 btn.repetirNivel=Repetir nivel
